--- a/style/header.sass
+++ b/style/header.sass
@@ -1,14 +1,5 @@
 @import vars
 
-.width-site
-    width: $width-site
-    display: flex
-    justify-content: center
-    height: 75px
-    background-color: #ffffff
-    border: 1px solid #ececec
-    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.17)
-
 .header
     width: $work-area
     display: grid
@@ -78,6 +69,7 @@
 .cart_MyAcc
     display: flex
     align-items: center
+    justify-self: end
     a
         padding: 10px
     details
