--- a/style/style.sass
+++ b/style/style.sass
@@ -1,6 +1,19 @@
 @import header
 @import vars
+@import nav
+@import main
+
 
 body
     display: flex
-    justify-content: center    
+    justify-content: center
+
+.width-site
+    width: $width-site
+    display: grid
+    grid-template-rows: 100% 100%
+    justify-items: center
+    height: 75px
+    background-color: #ffffff
+    border: 1px solid #ececec
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.17)
