--- a/style/main.sass
+++ b/style/main.sass
@@ -1,5 +1,6 @@
 @import vars
 
+/*slider start
 .slider
     background-image: url(../img/curly_man.jpg)
     width: 1608px
@@ -7,7 +8,7 @@
     background-color: #e8e8e8
     position: relative
 
-.slider-text
+.slider_text
     position: absolute
     border-left: 12px solid #f16d7f
     top: 250px
@@ -31,3 +32,49 @@
     span
         font-size: 40px
         color: #f16d7f
+/*slider end
+
+/*advertising sart
+.advertising
+    margin: 100px auto
+    width: $work-area
+    display: grid
+    grid-template-columns: 1fr 1fr
+    grid-gap: 1em
+    .pic_1
+        background-image: url(../img/Products_advertising/pic_1.jpg)
+        width: 560px
+        height: 542px
+        grid-row: 1/3
+    .pic_2
+        background-image: url(../img/Products_advertising/pic_2.jpg)
+        width: 560px
+        height: 261px
+    .pic_3
+        background-image: url(../img/Products_advertising/pic_3.jpg)
+        width: 560px
+        height: 261px
+    .pic_4
+        background-image: url(../img/Products_advertising/pic_4.jpg)
+        width: 560px
+        height: 542px
+        grid-row: 2/4
+
+.text_pic
+    width: 175px
+    height: 82px
+    background-color: #ffffff
+    position: relative
+    width: fit-content
+    p
+        font-family: Lato
+        font-size: 18px
+        line-height: 1.2
+        font-weight: 900
+        text-transform: uppercase
+        letter-spacing: 0.025em
+        color: #222222
+        padding: 15px 20px
+        span
+            font-size: 30px
+            color: #f16d7f
