--- a/style/style.sass
+++ b/style/style.sass
@@ -11,7 +11,7 @@ body
 .width-site
     width: $width-site
     display: grid
-    grid-template-rows: 100% 100%
+    grid-template-rows: 75px 51px 100%
     justify-items: center
     height: 75px
     background-color: #ffffff
