--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i,900,900i");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans");
 .header {
   width: 1145px;
   display: -ms-grid;
