--- a/style/style.sass
+++ b/style/style.sass
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i,900,900i');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
 @import header
 @import vars
 @import nav
 @import main
+
 
 
 body
