--- a/style/header.css
+++ b/style/header.css
@@ -68,7 +68,7 @@
 }
 
 .search details summary:after {
-  content: '\23F7';
+  content: '\25BE';
   font-size: 15px;
   line-height: 32px;
   font-weight: 400;
@@ -125,7 +125,7 @@
 }
 
 .cart_MyAcc details summary:after {
-  content: '\23F7';
+  content: '\25BE';
   font-size: 15px;
   line-height: 32px;
   font-weight: 400;
