--- a/style/header.sass
+++ b/style/header.sass
@@ -47,7 +47,7 @@
             list-style: none
             padding: 4px
         summary:after
-            content: '\23F7'
+            content: '\25BE'
             font-size: 15px
             line-height: 32px
             font-weight: 400
@@ -87,7 +87,7 @@
             list-style: none
             padding: 4px
         summary:after
-            content: '\23F7'
+            content: '\25BE'
             font-size: 15px
             line-height: 32px
             font-weight: 400
