--- a/style/main.sass
+++ b/style/main.sass
@@ -79,3 +79,21 @@
             font-size: 30px
             color: #f16d7f
 /*advertising end
+/*Prod_heading start
+.prod_heading
+    text-align: center
+    h3
+        font-family: Lato
+        font-size: 30px
+        line-height: 54px
+        font-weight: 700
+        letter-spacing: 0.025em
+        color: #222222
+        margin: 0
+    p
+        font-family: Lato
+        font-size: 14px
+        font-weight: 400
+        letter-spacing: 0.025em
+        color: #9f9f9f
+        margin: 0
