need to do button on hover

--- a/style/main.sass
+++ b/style/main.sass
@@ -82,6 +82,7 @@
 /*Prod_heading start
 .prod_heading
     text-align: center
+    margin-bottom: 60px
     h3
         font-family: Lato
         font-size: 30px
@@ -97,3 +98,13 @@
         letter-spacing: 0.025em
         color: #9f9f9f
         margin: 0
+/*Prod_heading stop
+/*product_to_buy start
+.products_to_buy
+    width: $work-area
+    margin: auto
+    display: grid
+    grid-template-columns: 1fr 1fr 1fr 1fr
+    grid-gap: 1em
+/*product_to_buy stop
+ 
